@@ -1,23 +1,23 @@
 #!/usr/bin/env bash
 ###############################################################################
-# hidethatbanner.sh - (C)opyright 2018-2022 OneCD [one.cd.only@gmail.com]
-#
+# hidethatbanner.sh - (C)opyright 2018-2023 OneCD [one.cd.only@gmail.com]
+
 # This script is part of the 'HideThatBanner' package
-#
+
 # For more info: [https://forum.qnap.com/viewtopic.php?f=320&t=140215]
-# Available in the Qnapclub Store: [https://qnapclub.eu/en/qpkg/560]
+# Available in the myqnap store: [https://myqnap.org]
 # Project source: [https://github.com/OneCDOnly/HideThatBanner]
-#
+
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
 # Foundation, either version 3 of the License, or (at your option) any later
 # version.
-#
+
 # This program is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 # FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 # details.
-#
+
 # You should have received a copy of the GNU General Public License along with
 # this program. If not, see http://www.gnu.org/licenses/.
 ###############################################################################
@@ -34,18 +34,14 @@ Init()
         exit 1
     fi
 
-    local GETCFG_CMD=/sbin/getcfg
-    local SETCFG_CMD=/sbin/setcfg
-    readonly CMP_CMD=/bin/cmp
     readonly SED_CMD=/bin/sed
-
     local APP_CENTER_NOTIFIER=/sbin/qpkg_cli     # only needed for QTS 4.5.1-and-later
     readonly SOURCE_PATHFILE=/home/httpd/cgi-bin/apps/qpkg/css/qpkg.css
     readonly BACKUP_PATHFILE=${SOURCE_PATHFILE}.bak
-    readonly NAS_FIRMWARE=$($GETCFG_CMD System Version -f /etc/config/uLinux.conf)
+    readonly NAS_FIRMWARE=$(/sbin/getcfg System Version -f /etc/config/uLinux.conf)
     readonly SERVICE_STATUS_PATHFILE=/var/run/$QPKG_NAME.last.operation
 
-    $SETCFG_CMD "$QPKG_NAME" Status complete -f "$CONFIG_PATHFILE"
+    /sbin/setcfg "$QPKG_NAME" Status complete -f "$CONFIG_PATHFILE"
 
     # KLUDGE: force-cancel QTS 4.5.1 App Center notifier status as it's often wrong. :(
     [[ -e $APP_CENTER_NOTIFIER ]] && $APP_CENTER_NOTIFIER -c "$QPKG_NAME" > /dev/null 2>&1
@@ -103,8 +99,8 @@ case "$1" in
             $SED_CMD -i 's| .banner_show{| .banner_show{display:none;|' "$SOURCE_PATHFILE"
         fi
 
-        if ! ($CMP_CMD -s "$SOURCE_PATHFILE" "$BACKUP_PATHFILE"); then
-            LogWrite "App Center was patched successfully" 0
+        if ! (/bin/cmp -s "$SOURCE_PATHFILE" "$BACKUP_PATHFILE"); then
+            LogWrite 'App Center was patched successfully' 0
             SetServiceOperationResultOK
         else
             LogWrite "App Center was not patched! (QTS $NAS_FIRMWARE)" 2
